[package]
name = "pbs-tools"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "common tools used throughout pbs"

# This must not depend on any subcrates more closely related to pbs itself.
[dependencies]
anyhow.workspace = true
bytes.workspace = true
foreign-types.workspace = true
hex.workspace = true
libc.workspace = true
nom.workspace = true
openssl.workspace = true
serde_json.workspace = true
# rt-multi-thread is required for block_in_place
tokio = { workspace = true, features = [ "fs", "io-util", "rt", "rt-multi-thread", "sync" ] }

proxmox-async.workspace = true
proxmox-io = { workspace = true, features = [ "tokio" ] }
proxmox-human-byte.workspace = true
proxmox-sys.workspace = true
proxmox-time.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [ "macros" ] }
